command line arg added for dir to be orgranised