@@ -2,5 +2,4 @@
 Moves files of the same type in the same folder and all the directories are exlored recursively. 
 
 ## Installing and Running the program
-  * After cloning the repository. Compile the program using ```javac *.java``` and then run the program using ```java Main```.
-  * Use the file chooser prompted to navigate to the directory you wish to sort. 
+Run 'java -jar --enable-preview  File-Organizer.jar /dir/to/organize/'
